# clp-plugin-presto-connector

./: README.md  taskfile.yaml
presto-connector/: README.md  pom.xml  taskfile.yaml
presto-connector/taskfiles/: lint.yaml
taskfiles/: lint.yaml
taskfiles/velox-connector/: deps.yaml  main.yaml
velox-connector/: .gitignore  CMakeLists.txt  README.md
velox-connector/src/connector/: CMakeLists.txt
velox-connector/src/connector/search_lib/: CMakeLists.txt
velox-connector/src/connector/search_lib/archive/: CMakeLists.txt
velox-connector/src/connector/search_lib/ir/: CMakeLists.txt
velox-connector/taskfiles/: deps.yaml  velox-connector.yaml
